# pwrRacingFigures

./: CMakeLists.txt  README.md
include/: Point.hpp  RightTriangle.hpp  Segment.hpp  Triangle.hpp
src/: Point.cpp  RightTriangle.cpp  Segment.cpp  Triangle.cpp  main.cpp
